add dependencies for each notebook

--- a/deep_learning_model.ipynb
+++ b/deep_learning_model.ipynb
@@ -3,7 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "advance-modification",
+   "id": "hundred-usage",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update sklearn to prevent version mismatches\n",
+    "!pip install sklearn --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "generic-throat",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install joblib. This will be used to save your model. \n",
+    "# Restart your kernel after installing \n",
+    "!pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "prime-child",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "detected-recorder",
    "metadata": {},
    "outputs": [],
    "source": []
