--- a/svm_model.ipynb
+++ b/svm_model.ipynb
@@ -3,31 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "owned-preserve",
+   "id": "disturbed-ukraine",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Update sklearn to prevent version mismatches\n",
+    "!pip install sklearn --upgrade"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "living-timeline",
+   "id": "similar-testimony",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# install joblib. This will be used to save your model. \n",
+    "# Restart your kernel after installing \n",
+    "!pip install joblib"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incorporated-commodity",
+   "id": "coordinated-found",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "desperate-impact",
+   "id": "approved-relationship",
    "metadata": {},
    "outputs": [],
    "source": []
