--- a/test_model.ipynb
+++ b/test_model.ipynb
@@ -3,7 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statewide-regard",
+   "id": "russian-prevention",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update sklearn to prevent version mismatches\n",
+    "!pip install sklearn --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hybrid-times",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install joblib. This will be used to save your model. \n",
+    "# Restart your kernel after installing \n",
+    "!pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "earlier-cocktail",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "colonial-october",
    "metadata": {},
    "outputs": [],
    "source": []
