--- a/deep_learning_model.ipynb
+++ b/deep_learning_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hundred-usage",
+   "id": "destroyed-beast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "generic-throat",
+   "id": "standard-ability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prime-child",
+   "id": "corporate-trainer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "detected-recorder",
+   "id": "superb-sheet",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exoplanet Data Source, https://www.kaggle.com/nasa/kepler-exoplanet-search-results\n",
+    "df = pd.read_csv(\"exoplanet_data.csv\")\n",
+    "# Drop the null columns where all values are null\n",
+    "df = df.dropna(axis='columns', how='all')\n",
+    "# Drop the null rows\n",
+    "df = df.dropna()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "boxed-enforcement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "y = df[\"koi_disposition\"]\n",
+    "X = df.drop(columns=[\"koi_disposition\"])\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ranging-valve",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "surprised-baseball",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale your data\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "X_scaler = MinMaxScaler().fit(X_train)\n",
+    "\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "smaller-vinyl",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "assured-broadcast",
    "metadata": {},
    "outputs": [],
    "source": []
