--- a/svm_model.ipynb
+++ b/svm_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disturbed-ukraine",
+   "id": "centered-boating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "similar-testimony",
+   "id": "based-championship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coordinated-found",
+   "id": "common-baghdad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "approved-relationship",
+   "id": "associate-principle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exoplanet Data Source, https://www.kaggle.com/nasa/kepler-exoplanet-search-results\n",
+    "df = pd.read_csv(\"exoplanet_data.csv\")\n",
+    "# Drop the null columns where all values are null\n",
+    "df = df.dropna(axis='columns', how='all')\n",
+    "# Drop the null rows\n",
+    "df = df.dropna()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pressing-collaboration",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "y = df[\"koi_disposition\"]\n",
+    "X = df.drop(columns=[\"koi_disposition\"])\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rural-somewhere",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "greater-story",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale your data\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "X_scaler = MinMaxScaler().fit(X_train)\n",
+    "\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mounted-earth",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC \n",
+    "model = SVC(kernel='linear')\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "random-reason",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Training Data Score: {model2.score(X_train_scaled, y_train)}\")\n",
+    "print(f\"Testing Data Score: {model2.score(X_test_scaled, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "suffering-professor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the GridSearch estimator along with a parameter object containing the values to adjust\n",
+    "# Try adjusting `C` with values of 1, 5, and 10. Adjust `gamma` using .0001, 0.001, and 0.01\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "param_grid = {'C': [1, 5, 10],\n",
+    "              'gamma': [0.0001, 0.001, 0.01]}\n",
+    "grid = GridSearchCV(model, param_grid, verbose=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "basic-murray",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the model using the grid search estimator. \n",
+    "# This will take the SVC model and try each combination of parameters\n",
+    "grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "finnish-solomon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List the best parameters for this dataset\n",
+    "print(grid.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intensive-tsunami",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List the best score\n",
+    "print(grid.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "multiple-republican",
    "metadata": {},
    "outputs": [],
    "source": []
