linear regression model ran-not great #s

--- a/svm_model.ipynb
+++ b/svm_model.ipynb
@@ -76,6 +76,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "going-england",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "greater-story",
    "metadata": {},
    "outputs": [],
@@ -96,8 +106,8 @@
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC \n",
-    "model = SVC(kernel='linear')\n",
-    "model.fit(X_train, y_train)"
+    "model = SVC(kernel ='linear')\n",
+    "model.fit(X_train_scaled, y_train)"
    ]
   },
   {
