--- a/logistical_regression_model.ipynb
+++ b/logistical_regression_model.ipynb
@@ -11,10 +11,10 @@
      "text": [
       "Requirement already up-to-date: sklearn in c:\\users\\eliza\\anaconda3\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied, skipping upgrade: scikit-learn in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from sklearn) (0.23.1)\n",
-      "Requirement already satisfied, skipping upgrade: numpy>=1.13.3 in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (1.18.5)\n",
-      "Requirement already satisfied, skipping upgrade: scipy>=0.19.1 in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (1.5.0)\n",
+      "Requirement already satisfied, skipping upgrade: joblib>=0.11 in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (0.16.0)\n",
       "Requirement already satisfied, skipping upgrade: threadpoolctl>=2.0.0 in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (2.1.0)\n",
-      "Requirement already satisfied, skipping upgrade: joblib>=0.11 in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (0.16.0)\n"
+      "Requirement already satisfied, skipping upgrade: numpy>=1.13.3 in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (1.18.5)\n",
+      "Requirement already satisfied, skipping upgrade: scipy>=0.19.1 in c:\\users\\eliza\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (1.5.0)\n"
      ]
     }
    ],
@@ -291,38 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Select your features (columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"None of [Index(['names', 'of', 'selected', 'features', 'here'], dtype='object')] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-0a84e8f06319>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Set features. This will also be used as your x values.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mselected_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'names'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'of'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'selected'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'features'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'here'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2804\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2805\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2806\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2807\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2808\u001b[0m         \u001b[1;31m# take() does not accept boolean indexers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[1;34m(self, key, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1550\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1551\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1552\u001b[1;33m         self._validate_read_indexer(\n\u001b[0m\u001b[0;32m   1553\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mraise_missing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1554\u001b[0m         )\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[1;34m(self, key, indexer, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1638\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mmissing\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1639\u001b[0m                 \u001b[0maxis_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_axis_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1640\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"None of [{key}] are in the [{axis_name}]\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1641\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1642\u001b[0m             \u001b[1;31m# We (temporarily) allow for some missing keys with .loc, except in\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"None of [Index(['names', 'of', 'selected', 'features', 'here'], dtype='object')] are in the [columns]\""
-     ]
-    }
-   ],
-   "source": [
-    "# Set features. This will also be used as your x values.\n",
-    "#selected_features = df[['names', 'of', 'selected', 'features', 'here']]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Select your features (columns)\n",
     "# Create a Train Test Split\n",
     "\n",
     "Use `koi_disposition` for the y values"
@@ -334,6 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set features. This will also be used as your x values.\n",
+    "#selected_features = df[['names', 'of', 'selected', 'features', 'here']]\n",
     "from sklearn.model_selection import train_test_split\n",
     "y = df[\"koi_disposition\"]\n",
     "X = df.drop(columns=[\"koi_disposition\"])\n",
@@ -565,6 +536,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4002    FALSE POSITIVE\n",
+       "4246    FALSE POSITIVE\n",
+       "548     FALSE POSITIVE\n",
+       "3953    FALSE POSITIVE\n",
+       "2362         CONFIRMED\n",
+       "Name: koi_disposition, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -575,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +616,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +746,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=1, penalty=l2, score=0.641, total=   1.1s\n",
+      "[CV] ..................... C=1, penalty=l2, score=0.641, total=   0.9s\n",
       "[CV] C=1, penalty=l2 .................................................\n"
      ]
     },
@@ -772,7 +768,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=1, penalty=l2, score=0.626, total=   1.0s\n",
+      "[CV] ..................... C=1, penalty=l2, score=0.626, total=   1.3s\n",
       "[CV] C=1, penalty=l2 .................................................\n"
      ]
     },
@@ -794,7 +790,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=1, penalty=l2, score=0.648, total=   1.2s\n",
+      "[CV] ..................... C=1, penalty=l2, score=0.648, total=   1.1s\n",
       "[CV] C=1, penalty=l2 .................................................\n"
      ]
     },
@@ -827,7 +823,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=1, penalty=l2, score=0.628, total=   1.0s\n",
+      "[CV] ..................... C=1, penalty=l2, score=0.628, total=   0.9s\n",
       "[CV] C=5, penalty=l1 .................................................\n",
       "[CV] ....................... C=5, penalty=l1, score=nan, total=   0.0s\n",
       "[CV] C=5, penalty=l1 .................................................\n",
@@ -859,7 +855,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.613, total=   1.0s\n",
+      "[CV] ..................... C=5, penalty=l2, score=0.613, total=   0.9s\n",
       "[CV] C=5, penalty=l2 .................................................\n"
      ]
     },
@@ -903,7 +899,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.627, total=   1.0s\n",
+      "[CV] ..................... C=5, penalty=l2, score=0.627, total=   1.1s\n",
       "[CV] C=5, penalty=l2 .................................................\n"
      ]
     },
@@ -925,7 +921,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.640, total=   1.1s\n",
+      "[CV] ..................... C=5, penalty=l2, score=0.640, total=   1.0s\n",
       "[CV] C=5, penalty=l2 .................................................\n"
      ]
     },
@@ -958,7 +954,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.597, total=   0.9s\n",
+      "[CV] ..................... C=5, penalty=l2, score=0.597, total=   0.8s\n",
       "[CV] C=10, penalty=l1 ................................................\n",
       "[CV] ...................... C=10, penalty=l1, score=nan, total=   0.0s\n",
       "[CV] C=10, penalty=l1 ................................................\n",
@@ -1034,7 +1030,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] .................... C=10, penalty=l2, score=0.624, total=   1.0s\n",
+      "[CV] .................... C=10, penalty=l2, score=0.624, total=   0.9s\n",
       "[CV] C=10, penalty=l2 ................................................\n"
      ]
     },
@@ -1056,7 +1052,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] .................... C=10, penalty=l2, score=0.641, total=   1.2s\n",
+      "[CV] .................... C=10, penalty=l2, score=0.641, total=   1.3s\n",
       "[CV] C=10, penalty=l2 ................................................\n"
      ]
     },
@@ -1072,7 +1068,7 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n",
-      "[Parallel(n_jobs=1)]: Done  30 out of  30 | elapsed:   14.4s finished\n"
+      "[Parallel(n_jobs=1)]: Done  30 out of  30 | elapsed:   14.2s finished\n"
      ]
     },
     {
@@ -1103,7 +1099,7 @@
        "             param_grid={'C': [1, 5, 10], 'penalty': ['l1', 'l2']}, verbose=3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1141,16 +1137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model_1.sav']"
+       "['logistical_regression_model.sav']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
