saved svm model, ran deep learning and saved

--- a/svm_model.ipynb
+++ b/svm_model.ipynb
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "directed-bullet",
+   "id": "viral-place",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,15 @@
    "id": "multiple-republican",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save your model by updating \"your_name\" with your name\n",
+    "# and \"your_model\" with your model variable\n",
+    "# be sure to turn this in to BCS\n",
+    "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
+    "import joblib\n",
+    "filename = 'logistical_regression_model.sav'\n",
+    "joblib.dump(grid2, filename)"
+   ]
   }
  ],
  "metadata": {
